update with newer env vars

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,12 @@ services:
       - ./data/osm/:/custom_files
     environment:
       - use_tiles_ignore_pbf=True
+      - build_tar=False
       - force_rebuild=False
       - build_elevation=False
       - build_admins=False
       - build_time_zones=False
+      - server_threads=1
   valhalla_tomtom:
     image: gisops/valhalla:latest
     container_name: valhalla_tomtom
@@ -23,10 +25,12 @@ services:
       - ./data/tomtom/:/custom_files
     environment:
       - use_tiles_ignore_pbf=True
+      - build_tar=False
       - force_rebuild=False
       - build_elevation=False
       - build_admins=False
       - build_time_zones=False
+      - server_threads=1
     depends_on:
       - valhalla_osm
   valhalla_here:
